manifests/workloads/barnes-biz/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: barnes-biz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: website
          image: ghcr.io/barnes-c/website:0.7.0-beta.3@sha256:eb586c865b2f410b99c11f183880fb18eee715e1291d676e250b345528c64a72
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          securityContext:
            runAsUser: 1001
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
