manifests/workloads/barnes-biz/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: barnes-biz
spec:
  selector:
    app: website
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
